# FeldmanCousins

./: .gitignore  README.md
CMS-Frequentist-MonteCarlo/: CMS-Frequentest-MonteCarlo.cpp  CMS-Frequentest-MonteCarlo.h  CMakeLists.txt  Constants.h  GEtest.cpp  Hyper_Plane.cpp  Hyper_Plane.h  Matrix.cpp  Matrix.h  Orthogonal_Plane.cpp  Orthogonal_Plane.h  Plane.h  PlaneChecker.cpp  PlaneChecker.h  Point.cpp  Point.h  bin1.txt  bin2.txt  bin4.txt  bin5.txt  bintest.txt  correctedparameterfile.txt  csvConverter.cpp  csvConverter.h  quickhull.hpp  stdafx.h  targetver.h  tester.txt  testtocompare.txt
Frequentest-Analysis-CMS-master/: README.md
Frequentest-Analysis-CMS-master/CMS-Fequentest/: BinData.csv  CMS-Frequentest-Analysis.aps  CMS-Frequentest-Analysis.cpp  CMS-Frequentest-Analysis.h  CMS-Frequentest-Analysis.sln  CMS-Frequentest-Analysis.vcxproj  ConsoleApplication1.vcxproj.filters  Constants.h  GEtest.cpp  Hyper_Plane.cpp  Hyper_Plane.h  Hyper_Surface.cpp  Hyper_Surface.h  Matrix.cpp  Orthogonal_Plane.cpp  Orthogonal_Plane.h  Plane.cpp  Plane.h  PlaneChecker.cpp  PlaneChecker.h  Rotating_Plane.cpp  Rotating_Plane.h  bin3.txt  bin6.txt  bintest.txt  correctedparameterfile.txt  csvConverter.cpp  csvConverter.h  point.cpp  point.h  tester.txt  testtocompare.txt
Frequentest-Analysis-CMS-master/CMS-Fequentest/Debug/: CMS-Frequentest-Analysis.ilk  CMS-Frequentest-Analysis.pch  CMS-Frequentest-Analysis.vcxproj.FileListAbsolute.txt  ConsoleApplication1.pch  FrequentistAnalyticAnalysis.ilk  consoleapplication1.obj.enc  vc141.idb  vc142.idb
Frequentest-Analysis-CMS-master/CMS-Fequentest/Debug/CMS-Freq.57DD61EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMS-Frequentest-Analysis.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Frequentest-Analysis-CMS-master/CMS-Fequentest/Debug/ConsoleA.57DD61EB.tlog/: CL.read.1.tlog
Frequentest-Analysis-CMS-master/CMS-Fequentest/x64/Debug/: CMS-Frequentest-Analysis.ilk  CMS-Frequentest-Analysis.pch  CMS-Frequentest-Analysis.vcxproj.FileListAbsolute.txt  cms-frequentest-analysis.obj.enc  hyper_plane.new.obj.enc  hyper_surface.new.obj.enc  orthogonal_plane.new.obj.enc  vc141.idb  vc142.idb
Frequentest-Analysis-CMS-master/CMS-Fequentest/x64/Debug/CMS-Freq.57DD61EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMS-Frequentest-Analysis.lastbuildstate  CMS-Frequentest-Analysis.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Frequentest-Analysis-CMS-master/CMS-Fequentest/x64/Release/: CMS-Frequentest-Analysis.iobj  CMS-Frequentest-Analysis.ipdb  CMS-Frequentest-Analysis.pch  CMS-Frequentest-Analysis.vcxproj.FileListAbsolute.txt  FrequentistAnalyticAnalysis.iobj  FrequentistAnalyticAnalysis.ipdb
Frequentest-Analysis-CMS-master/CMS-Fequentest/x64/Release/CMS-Freq.57DD61EB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CMS-Frequentest-Analysis.lastbuildstate  CMS-Frequentest-Analysis.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Frequentest-Analysis-CMS-master/FrequentistAnalyticAnalysis/: BasicChannel.cpp  BasicChannel.h  BasicChannelReader.cpp  BasicChannelReader.h  Bin.cpp  Bin.h  Coordinate.h  FirstAnalyticParticleGraph.cpp  FirstAnalyticParticleGraph.h  FourthAnalyticParticleGraph.cpp  FourthAnalyticParticleGraph.h  FrequentistAnalyticAnalysis.aps  FrequentistAnalyticAnalysis.cpp  FrequentistAnalyticAnalysis.vcxproj  FrequentistAnalyticAnalysis.vcxproj.filters  Interval.h  Legacy.cpp  NeighborIterator.cpp  NeighborIterator.h  PhaseSpaceIterator.h  PoissonBin.cpp  PoissonBin.h  SecondAnalyticParticleGraph.cpp  SecondAnalyticParticleGraph.h  SingleChannelPoissonDistribution.cpp  SingleChannelPoissonDistribution.h  ThirdAnalyticParticleGraph.cpp  ThirdAnalyticParticleGraph.h  bin1.txt  bin12.txt  bin13.txt  bin2.txt  bin3.txt  bin4.txt  bin5.txt  bin6.txt  binInput.txt
Frequentest-Analysis-CMS-master/FrequentistAnalyticAnalysis/Debug/: vc142.idb
Frequentest-Analysis-CMS-master/FrequentistAnalyticAnalysis/Debug/Frequent.7f8d413c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Frequentest-Analysis-CMS-master/FrequentistAnalyticAnalysis/x64/Debug/: channel.obj.enc  particlegraph.obj.enc  thirdanalyticparticlegraph.obj.enc  vc142.idb
Frequentest-Analysis-CMS-master/FrequentistAnalyticAnalysis/x64/Debug/Frequent.7f8d413c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+4 more)
FrequentistAnalyticAnalysis/: BasicChannel.cpp  BasicChannel.h  BasicChannelReader.cpp  BasicChannelReader.h  Bin.cpp  Bin.h  CMakeLists.txt  Coordinate.h  DebugChannel.cpp  DebugChannel.h  DebugChannelReader.cpp  DebugChannelReader.h  FirstAnalyticParticleGraph.cpp  FirstAnalyticParticleGraph.h  FourthAnalyticParticleGraph.cpp  FourthAnalyticParticleGraph.h  FourthBinGraph.cpp  FourthBinGraph.h  FourthBorderGraph.cpp  FourthBorderGraph.h  FrequentistAnalyticAnalysis.cpp  FrequentistAnalyticAnalysis.vcxproj  FrequentistAnalyticAnalysis.vcxproj.filters  Interval.h  Legacy.cpp  NeighborIterator.cpp  NeighborIterator.h  PhaseSpaceIterator.h  PoissonBin.cpp  PoissonBin.h  PoissonLikelihood.cpp  PoissonLikelihood.h  SecondAnalyticParticleGraph.cpp  SecondAnalyticParticleGraph.h  SingleChannelPoissonDistribution.cpp  SingleChannelPoissonDistribution.h  ThirdAnalyticParticleGraph.cpp  ThirdAnalyticParticleGraph.h  bin1.txt  bin12.txt  (+7 more)
(+8 files in other folders)
